--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
     <script> 
         const socket = io("http://localhost:4000"); 
+        socket.on("new_message", data => console.log(data));
     </script>
 </body>
 </html>
